Swagger用サービス定義の追加
[swagger]
+ swagger用サービスの定義
+ swagger用ファイルのダウンロードの確認
